--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         <jakarta.json-api.version>2.1.1</jakarta.json-api.version>
     </properties>
     <modules>
-
+        <module>command-handler</module>
     </modules>
     <dependencyManagement>
         <dependencies>
