Added module eventstore-rdbms-core
Added module eventstore-rdbms-core

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
     </properties>
     <modules>
         <module>command-handler</module>
+        <module>eventstore-rdbms-core</module>
     </modules>
     <dependencyManagement>
         <dependencies>
