--- a/command-handler/src/main/resources/application.yml
+++ b/command-handler/src/main/resources/application.yml
@@ -56,24 +56,25 @@ logging.pattern:
   file: "%-5p|%d{ISO8601}{GMT}|application=${spring.application.name}|traceID=%X{traceId},spanID=%X{spanId}|%c{1}|%m%ex%n"
 
 # DataSource Configuration
-spring.datasource.type: com.zaxxer.hikari.HikariDataSource
-spring.datasource.url: jdbc:postgresql://${POSTGRES_HOST:localhost}:5432/postgres
-spring.datasource.driver-class-name: org.postgresql.Driver
-spring.datasource.username: postgres
-spring.datasource.password: postgres
-spring.datasource.testOnBorrow: true
-spring.datasource.validationQuery: SELECT 1
+spring.datasource.postgres.type: com.zaxxer.hikari.HikariDataSource
+#spring.datasource.postgres.url: jdbc:postgresql://${POSTGRES_HOST:localhost}:5432/postgres
+spring.datasource.postgres.jdbcUrl: jdbc:postgresql://${POSTGRES_HOST:localhost}:5432/postgres
+spring.datasource.postgres.driver-class-name: org.postgresql.Driver
+spring.datasource.postgres.username: postgres
+spring.datasource.postgres.password: postgres
+spring.datasource.postgres.testOnBorrow: true
+spring.datasource.postgres.validationQuery: SELECT 1
 # Hikari - https://github.com/brettwooldridge/HikariCP#configuration-knobs-baby
-spring.datasource.pool-name: HikariPool
-spring.datasource.connection-timeout: 20000
-spring.datasource.minimum-idle: 5
-spring.datasource.maximum-pool-size: 12
-spring.datasource.idle-timeout: 300000
-spring.datasource.max-lifetime: 1200000
-spring.datasource.auto-commit: false
+spring.datasource.postgres.pool-name: HikariPool
+spring.datasource.postgres.connection-timeout: 20000
+spring.datasource.postgres.minimum-idle: 5
+spring.datasource.postgres.maximum-pool-size: 12
+spring.datasource.postgres.idle-timeout: 300000
+spring.datasource.postgres.max-lifetime: 1200000
+spring.datasource.postgres.auto-commit: false
 # JPA & Hibernate properties
 spring.jpa.open-in-view: false
-spring.jpa.properties.hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.show_sql: false
 spring.jpa.properties.hibernate.format_sql: true
 spring.jpa.properties.hibernate.use_sql: true
