Enhance account command handling and domain aggregation
- Added new domain aggregate `Account` to represent the account entity.
- Updated `AccountAggregate` to integrate with new account commands and events.
- Created new `CreditAccountCommand` and `DebitAccountCommand` to handle credit and debit operations.
- Updated `CreateAccountCommand` and `CommandHandler` for better account creation logic.
- Modified `CreateAccountCommandHandler` to align with domain changes.
- Updated `AccountCreatedEvent` and VO classes (`DebitVO`, `EventExtensionVO`) for consistency.
- Refactored `Command` class, moved to `eventstore-postgresql-core` for better modularity.
- Made configuration changes in `application.yml` to support new commands.

--- a/command-handler/src/main/resources/application.yml
+++ b/command-handler/src/main/resources/application.yml
@@ -43,15 +43,15 @@ management.info.git.mode: full # Mode to use to expose git information.
 logging.level: # Log levels severity mapping. For instance, `logging.level.org.springframework: DEBUG`.
   org.springframework: INFO
   org.flywaydb: INFO
-  com.cjrequena.sample: DEBUG
+  com.cjrequena.sample: TRACE
 logging.pattern:
   console:  "%highlight{%-5p|%d{ISO8601}{GMT}|application=${spring.application.name}|traceID=%X{traceId},spanID=%X{spanId}|%c{1}|%m%ex%n}{
-      FATAL=red blink,
-      ERROR=red,
-      WARN=yellow bold,
-      INFO=white,
-      DEBUG=green bold,
-      TRACE=blue
+      FATAL=bg_red, 
+      ERROR=red, 
+      WARN=yellow, 
+      INFO=green, 
+      DEBUG=blue, 
+      TRACE=cyan
     }"
   file: "%-5p|%d{ISO8601}{GMT}|application=${spring.application.name}|traceID=%X{traceId},spanID=%X{spanId}|%c{1}|%m%ex%n"
 
