--- a/command-handler/src/main/resources/application.yml
+++ b/command-handler/src/main/resources/application.yml
@@ -91,3 +91,11 @@ spring.flyway:
   baseline-on-migrate: true
   #locations: classpath:/db/migration
   locations: classpath:/db/migration/postgres
+
+eventstore:
+  snapshot:
+    # The aggregate type
+    ACCOUNT_AGGREGATE:
+      enabled: true
+      interval: 10
+
