Moved main package for eventstore-postgresql-core module from com.cjrequena.sample to com.cjrequena.eventstore.sample

--- a/command-handler/pom.xml
+++ b/command-handler/pom.xml
@@ -22,7 +22,7 @@
 
 
         <dependency>
-            <groupId>com.cjrequena.sample</groupId>
+            <groupId>com.cjrequena.eventstore.sample</groupId>
             <artifactId>eventstore-postgresql-core</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
