--- a/eventstore-postgresql-core/pom.xml
+++ b/eventstore-postgresql-core/pom.xml
@@ -8,6 +8,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <groupId>com.cjrequena.eventstore.sample</groupId>
     <artifactId>eventstore-postgresql-core</artifactId>
     <packaging>jar</packaging>
 
