--- a/query-handler/src/main/resources/application.yml
+++ b/query-handler/src/main/resources/application.yml
@@ -58,7 +58,7 @@ logging.pattern:
     }"
   file: "%-5p|%d{ISO8601}{GMT}|application=${spring.application.name}|traceID=%X{traceId},spanID=%X{spanId}|%c{1}|%m%ex%n"
 
-# DataSource Configuration :: EventStore
+# DataSource Configuration :: ProjectionDB
 spring.datasource.postgres.type: com.zaxxer.hikari.HikariDataSource
 #spring.datasource.postgres.url: jdbc:postgresql://${POSTGRES_HOST:localhost}:5432/postgres
 spring.datasource.postgres.jdbcUrl: jdbc:postgresql://${POSTGRES_HOST:localhost}:5432/postgres
@@ -68,13 +68,14 @@ spring.datasource.postgres.password: postgres
 spring.datasource.postgres.testOnBorrow: true
 spring.datasource.postgres.validationQuery: SELECT 1
 # Hikari - https://github.com/brettwooldridge/HikariCP#configuration-knobs-baby
-spring.datasource.postgres.pool-name: EventStoreHikariPool
+spring.datasource.postgres.pool-name: ProjectionDBHikariPool
 spring.datasource.postgres.connection-timeout: 20000
 spring.datasource.postgres.minimum-idle: 5
 spring.datasource.postgres.maximum-pool-size: 12
 spring.datasource.postgres.idle-timeout: 300000
 spring.datasource.postgres.max-lifetime: 1200000
 spring.datasource.postgres.auto-commit: false
+
 
 # JPA & Hibernate properties
 spring.jpa.open-in-view: false
@@ -87,12 +88,14 @@ spring.jpa.properties.hibernate.id.new_generator_mappings: false
 spring.jpa.properties.hibernate.search.autoregister_listeners: false
 spring.jpa.properties.hibernate.bytecode.use_reflection_optimizer: false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation: true
-#spring.jpa.properties.hibernate.default_schema: s_account
+spring.jpa.properties.hibernate.default_schema: account
 
 # flyway
 spring.flyway:
   enabled: true
   baseline-on-migrate: true
+  schemas: account
+  default-schema: account
   #locations: classpath:/db/migration
   locations: classpath:/db/migration/postgres
 
