--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     volumes:
       - postgres-data:/data/postgres
       - $PWD/provision/V1.0__eventstore_schema.sql:/docker-entrypoint-initdb.d/1-schema.sql
+      - $PWD/provision/V1.0__account_schema.sql:/docker-entrypoint-initdb.d/2-schema.sql
     ports:
       - "5432:5432"
     networks:
