Implemented business logic to to store into the projectionDB from event-handler

--- a/event-handler/src/main/resources/application.yml
+++ b/event-handler/src/main/resources/application.yml
@@ -154,7 +154,7 @@ eventstore:
   # Available subscription: polling, postgres-channel
   subscription:
     enabled: true
-    name: event-handler
-    #name: event-handler-${random.int(100)}
+    #name: event-handler
+    name: event-handler-${random.int(100)}
     polling-initial-delay: PT6S
     polling-interval: PT6S
