Added MongoDB Projection at event handler module

--- a/.docker/.env
+++ b/.docker/.env
@@ -4,3 +4,6 @@ POSTGRES_PASSWORD=postgres
 PGADMIN_VERSION=latest
 PGADMIN_DEFAULT_EMAIL=pgadmin@pgadmin.org
 PGADMIN_DEFAULT_PASSWORD=admin
+# MongoDB
+MONGO_VERSION=latest
+MONGO_EXPRESS_VERSION=latest
