--- a/command-handler/src/main/resources/application.yml
+++ b/command-handler/src/main/resources/application.yml
@@ -48,7 +48,7 @@ logging.level: # Log levels severity mapping. For instance, `logging.level.org.s
   com.cjrequena.eventstore.sample: INFO
 
 logging.pattern:
-  console:  "%highlight{%-5p|%d{ISO8601}{GMT}|application=${spring.application.name}|traceID=%X{traceId},spanID=%X{spanId}|%c{1}|%m%ex%n}{
+  console: "%highlight{%-5p|%d{ISO8601}{GMT}|application=${spring.application.name}|traceID=%X{traceId},spanID=%X{spanId}|%c{1}|%m%ex%n}{
       FATAL=bg_red, 
       ERROR=red, 
       WARN=yellow, 
@@ -90,17 +90,60 @@ spring:
             bytecode.use_reflection_optimizer: false
             jdbc.lob.non_contextual_creation: true
             #default_schema: eventstore
+    # ProjectionDB DataSource Configuration
+    projectiondb:
+      type: com.zaxxer.hikari.HikariDataSource
+      jdbcUrl: jdbc:postgresql://${POSTGRES_HOST:localhost}:5432/postgres
+      driver-class-name: org.postgresql.Driver
+      username: postgres
+      password: postgres
+      testOnBorrow: true
+      validationQuery: SELECT 1
+      pool-name: ProjectionDBHikariPool
+      connection-timeout: 20000
+      minimum-idle: 5
+      maximum-pool-size: 12
+      idle-timeout: 300000
+      max-lifetime: 1200000
+      auto-commit: false
+      jpa:
+        open-in-view: false
+        properties:
+          hibernate:
+            dialect: org.hibernate.dialect.PostgreSQLDialect
+            show_sql: false
+            format_sql: true
+            use_sql: true
+            id.new_generator_mappings: false
+            search.autoregister_listeners: false
+            bytecode.use_reflection_optimizer: false
+            jdbc.lob.non_contextual_creation: true
+            default_schema: account
 
-# flyway
+# MongoDB :: Projection
+spring.data.mongodb:
+  uri: mongodb://root:root@127.0.0.1:27017/account?authSource=admin
+  #uri: mongodb://127.0.0.1:27017/account?authSource=admin
+  auto-index-creation: true
+
+# Flyway
 spring.flyway:
   enabled: true
   baseline-on-migrate: true
   #locations: classpath:/db/migration
   locations: classpath:/db/migration/postgres
 
+# EventStore Conf.
 eventstore:
   snapshot:
     # The aggregate type
     ACCOUNT_AGGREGATE:
       enabled: true
       interval: 5
+  # Available subscription: polling, postgres-channel
+  subscription:
+    enabled: true
+    #name: event-handler
+    name: event-handler-${random.int(100)}
+    polling-initial-delay: PT6S
+    polling-interval: PT6S
