--- a/command-handler/src/main/resources/application.yml
+++ b/command-handler/src/main/resources/application.yml
@@ -143,7 +143,7 @@ eventstore:
   # Available subscription: polling, postgres-channel, event handler.
   subscription:
     enabled: true
-    name: booking-order-subscription-001
-    #name: event-handler-${random.int(100)}
+    #name: booking-order-subscription-001
+    name: event-handler-${random.int(100)}
     polling-initial-delay: PT6S
     polling-interval: PT6S
