Moved packages from component to service

--- a/command-handler/src/main/resources/application.yml
+++ b/command-handler/src/main/resources/application.yml
@@ -140,7 +140,7 @@ eventstore:
     ACCOUNT_AGGREGATE:
       enabled: true
       interval: 5
-  # Available subscription: polling, postgres-channel, event handler.
+  # Available subscription: polling, postgres-channel, event process.
   subscription:
     enabled: true
     #name: booking-order-subscription-001
