--- a/.docker/.env
+++ b/.docker/.env
@@ -7,3 +7,7 @@ PGADMIN_DEFAULT_PASSWORD=admin
 # MongoDB
 MONGO_VERSION=latest
 MONGO_EXPRESS_VERSION=latest
+# KAFKA
+KAFKA_VERSION=7.9.0
+KAFBAT_UI_VERSION=latest
+CLUSTER_ID=MkU3OEVBNTcwNTJENDM2Qk
